--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+### Django ###
+*.log
+*.pot
+*.pyc
+*__pycache__/
+local_settings.py
+.env
 db.sqlite3
